<?xml version="1.0"?>
<package format="2">
  <name>gazebo_noisy_depth_camera</name>
  <version>1.0.1</version>
  <description>Gazebo depth camera which supports noise</description>
  <url type="website">https://github.com/peci1/gazebo_noisy_depth_camera</url>

  <license>BSD</license>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_dev</depend>

  <exec_depend>gazebo_custom_sensor_preloader</exec_depend>

  <export>
    <gazebo_custom_sensor_preloader plugin="${prefix}/sensors.xml" />
  </export>
</package>
